--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
+  /* min-height: 100%; */
+  width: 100%;
 }
 #footer {
   background-color: #444;
@@ -51,27 +52,29 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  /* height: 80px; */
   background-color: #252831;
   text-align:center;
+  padding: 15px 0px;
 }
 nav h1 {
   margin: auto;
 }
 nav h1 a {
   color: #fff;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 0px 16px 40px;
     list-style: none;
     background-color: #eee;
     font-size: 1.25em;
-    margin: 0;
-    width: calc(50% - 80px);
+    margin: 0px;
+    /* width: calc(50% - 80px); */
+    /* width: 100%; */
 }
 
 /* Display list items side by side */
@@ -106,25 +109,32 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  background-color: rgb(35, 105, 151);
   align-items: center;
+  padding: 15px 0px;
+  display: block;
 }
 .filter-options h2 {
   color: white;
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
+  /* line-height: 1em; */
+  margin: 10px 20px;
+}
+.filter-options label{
+  display: inline-block;
+  color: white;
+  font-size: 1em;
+  margin: 10px 20px;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 1em;
-  height: 35px;
+  height: 42px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 0px 10px 0px 0px;
   padding: 0 10px;
   width: 200px;
 }
@@ -147,7 +157,8 @@ nav h1 a {
   margin: 15px;
   padding: 0px 30px 25px 30px;
   text-align: left;
-  width: calc((100% - 188px)/2);
+  /* width: calc((100% - 188px)/2); */
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -185,7 +196,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
+/* .inside header {
   position: fixed;
   top: 0;
   width: 100%;
@@ -194,10 +205,7 @@ nav h1 a {
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
@@ -207,8 +215,8 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
-}
+  width: 100%;
+} */
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -220,7 +228,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 1em;
@@ -232,20 +240,20 @@ nav h1 a {
   font-size: 1em;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin-bottom: 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 20px 20px;
+  max-width: 100%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  /* padding: 30px 0px */
 }
 #reviews-container h2 {
   color: #f58500;
@@ -253,21 +261,23 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  text-transform: uppercase;
 }
 #reviews-list {
-  margin: 0;
-  padding: 0;
+  margin: 0px auto;
+  padding: 0px;
+  max-width: 100%;
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  /* border: 2px solid #f3f3f3; */
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
+  margin: 10px 0px;
+  /* overflow: hidden; */
+  padding: 15px 15px;
+  /* position: relative; */
+  width: calc(100% - 30px);
 }
 #reviews-list li p {
   margin: 0 0 10px;
