--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
-  /* min-height: 100%; */
   width: 100%;
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #ddd;
   font-size: 1em;
   letter-spacing: 1px;
   padding: 25px;
@@ -52,7 +51,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  /* height: 80px; */
   background-color: #252831;
   text-align:center;
   padding: 15px 0px;
@@ -73,8 +71,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 1.25em;
     margin: 0px;
-    /* width: calc(50% - 80px); */
-    /* width: 100%; */
 }
 
 /* Display list items side by side */
@@ -109,7 +105,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  background-color: rgb(35, 105, 151);
+  background-color: rgb(29, 87, 126);
   align-items: center;
   padding: 15px 0px;
   display: block;
@@ -125,6 +121,8 @@ nav h1 a {
   display: inline-block;
   color: white;
   font-size: 1em;
+  /* font-weight: bold; */
+  /* text-transform: uppercase; */
   margin: 10px 20px;
 }
 .filter-options select {
@@ -165,14 +163,14 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  /* min-height: 248px; */
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #d37000;
   font-family: Arial,sans-serif;
-  font-size: 1.2em;
-  font-weight: 200;
+  font-size: 1.3em;
+  font-weight: bold;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
@@ -183,11 +181,12 @@ nav h1 a {
   font-size: 1em;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #d37000;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 1.2em;
+  font-weight: bold;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -196,27 +195,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-/* .inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  width: 100%;
-}
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 100%;
-} */
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -227,8 +206,11 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
-	width: 100%;
+#restaurant-container .restaurant-img {
+  display: block;
+  margin: 0;
+  max-width: 100%;
+  min-width: 100%;
 }
 #restaurant-address {
   font-size: 1em;
@@ -252,9 +234,6 @@ nav h1 a {
   padding: 20px 20px;
   max-width: 100%;
 }
-#reviews-container {
-  /* padding: 30px 0px */
-}
 #reviews-container h2 {
   color: #f58500;
   font-size: 2em;
@@ -270,13 +249,10 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-  /* border: 2px solid #f3f3f3; */
   display: block;
   list-style-type: none;
   margin: 10px 0px;
-  /* overflow: hidden; */
   padding: 15px 15px;
-  /* position: relative; */
   width: calc(100% - 30px);
 }
 #reviews-list li p {
