--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
+*{
+  outline-color: #d37000;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1em;
@@ -36,7 +40,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #d9d9d9;
   width: 100%;
 }
 #footer {
@@ -68,7 +72,7 @@ nav h1 a {
 #breadcrumb {
     padding: 10px 0px 16px 40px;
     list-style: none;
-    background-color: #eee;
+    background-color: #d9d9d9;
     font-size: 1.25em;
     margin: 0px;
 }
@@ -125,7 +129,7 @@ nav h1 a {
   /* text-transform: uppercase; */
   margin: 10px 20px;
 }
-.filter-options select {
+.filter-options label select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
@@ -136,12 +140,15 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
+.filter-options label select:focus{
+  border: 5px solid #d37000;
+}
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   display: flex;
   flex-flow: wrap;
-  background-color: #f3f3f3;
+  background-color: #d9d9d9;
   list-style: outside none none;
   margin-left: auto;
   margin-right: auto;
@@ -150,13 +157,11 @@ nav h1 a {
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
+  border: 2px solid #b8b8b8;
   font-family: Arial,sans-serif;
   margin: 15px;
   padding: 0px 30px 25px 30px;
   text-align: left;
-  /* width: calc((100% - 188px)/2); */
-  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -182,16 +187,17 @@ nav h1 a {
 }
 #restaurants-list li a {
   background-color: #d37000;
-  border-bottom: 3px solid #eee;
   color: #fff;
-  display: inline-block;
+  display: block;
   font-size: 1.2em;
   font-weight: bold;
   margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  padding: 10px 30px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  outline-color: #01447e;
+  outline-width: 5px;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -202,9 +208,9 @@ nav h1 a {
   font-size: 2em;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  /* margin: 15px 0 30px; */
   text-transform: uppercase;
-  line-height: 1.1;
+  /* line-height: 1.1; */
 }
 #restaurant-container .restaurant-img {
   display: block;
@@ -229,6 +235,7 @@ nav h1 a {
 	width: 100%;
 }
 #restaurant-container, #reviews-container {
+  background-color: #fff;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 20px 20px;
@@ -239,7 +246,6 @@ nav h1 a {
   font-size: 2em;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
   text-transform: uppercase;
 }
 #reviews-list {
@@ -248,7 +254,7 @@ nav h1 a {
   max-width: 100%;
 }
 #reviews-list li {
-  background-color: #fff;
+  background-color: #e0e0e0;
   display: block;
   list-style-type: none;
   margin: 10px 0px;
@@ -260,4 +266,69 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* reactive stylings
+*
+*  all stylings use css grid, falling back to mobile styling if unsupported
+*
+*/
+
+@supports (display: grid) {
+
+  @media screen and (min-width: 660px){
+    #restaurants-list {
+      display: grid;
+      margin: 0px;
+      padding: 15px;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-gap: 15px;
+    }
+
+    #restaurants-list li{
+      max-width: 100%;
+      margin: 0px;
+      padding: 0px 15px 15px 15px;
+    }
+  }
+
+  @media screen and (min-width: 700px){
+    #map-container{
+      grid-area: map;
+      max-width: 100% !important;
+      margin: 0px;
+      padding: 0px;
+    }
+
+    #restaurant-container{
+      grid-area: restaurant;
+      border: none;
+    }
+
+    #reviews-container{
+      grid-area: reviews;
+      border: none;
+    }
+
+    .restaurant-wrapper{
+      display: grid;
+      margin: 0px;
+      padding: 0px;
+      grid-gap: 15px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas:
+      "map map"
+      "restaurant reviews"
+    }
+  }
+
+  @media screen and (min-width: 975px){
+    body{
+      width: 975px;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: #252831;
+    }
+  }
+
 }
