feature: restaurants can now be favorited
added ability for a user to favorite a restaurant. only one restaurant 
can be favorited at a time.

--styles: added styles for favoriting
--styles: adjusted many styles to work well with favoriting
--index.html: removed normalize.css
--restaurant.html: added PWA support
--restaurant.html: removed normalize.css
--restaurant.html: adjusted style.css
--restaurant.html: corrected spelling in aria-labels
--restaurant.html: ensured restaurant details are actually in the tab 
index (correct for section bug)
--restaurant.html: added favorite button
--util.js: added cookie reading/writing functions
--main.js: added support for reading/writing the favorite restaurant 
cookie
--main.js: all restaurant list items now have unique ids
--main.js: added favorite buttons
--main.js: added functions to enable toggling of favorite restaurants
--restaurant_info.js: added support for reading/writing the favorite 
restaurant cookie
--restaurant_info.js: added a favorite button
--restaurant_info.js: added functions to enable toggling of favorite 
restaurants

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,32 @@ header h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
+.restaurant-actions{
+	display: block;
+	margin: 15px auto 0px auto;
+}
+
+.favorite-btn{
+	font-family: Arial,sans-serif;
+	font-size: 1.2em;
+	color: white;
+	background-color: #0e3a57;
+	border: none;
+	padding: 10px 20px 10px;
+	height: 41px;
+	vertical-align: middle;
+}
+
+.favorite{
+	background-color: #0e3a57;
+	color: #fba13b;
+}
+
+.favorite-restaurant::after{
+	content: ' ★';
+}
+
 #breadcrumb {
   padding: 15px 0px 15px 15px;
   list-style: none;
@@ -186,8 +212,9 @@ header h1 a {
   display: block;
   font-size: 1.2em;
   font-weight: bold;
-  margin: 15px 0 0;
-  padding: 10px 30px 10px;
+  vertical-align: middle;
+	margin-right: 15px;
+  padding: 10px 20px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
