--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,57 @@ header h1 a {
   color: #666;
 }
 
+.review-form {
+	display: block;
+	font-family: Arial,sans-serif;
+	font-size: 1.2em;
+	color: white;
+	background-color: #0e3a57;
+	padding: 15px;
+	margin-bottom: 30px;
+}
+
+.review-form-heading {
+	margin-bottom: 15px;
+}
+
+.review-label {
+	display: inline;
+	width: 100px;
+	margin: 0px auto 0px 0px;
+	padding: 0px;
+}
+
+.review-element {
+	display: block;
+	margin-bottom: 15px;
+	max-width: calc(100% - 15px);
+}
+
+.review-textarea{
+	height: 100px;
+	width: 100%
+}
+
+.review-text-input{
+	width: 100%;
+}
+
+.review-number-input{
+	width: 100%;
+}
+
+.submit-btn{
+	margin: 0px;
+	width: 150px;
+	height: 42px;
+	background-color: #fba13b;
+  color: #0e3a57;
+  /* font-size: 1.2em; */
+  font-weight: bold;
+	border: none;
+}
+
 /* reactive stylings
 *
 *  all stylings use css grid, falling back to mobile styling if unsupported
